fixed footer support on mobile

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -8,17 +8,6 @@
   margin: 0px 0px;
 }
 
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 1rem;
-  line-height: 1.4;
-  padding: 0px 0px 5px;
-}
-
 .content {
   font-size: 1.2rem;
   text-align: justify;
